# C.U.R.S.O

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  index.js  index.mjs  package-lock.json  package.json  pyproject.toml
config/: dbConfig.mjs
db/: scripts.sql
docs/: escopo.md  projeto-adicional.md  relatorios.sql  tabelas.sql  valores.sql
docs/api/: contrato-inicial.md
docs/fases/: template-unico-fases-1-2-3-5.md
docs/sql/: README.md
docs/uml/: casos-de-uso.md  diagrama-classes.md
plan/: PROJETO C.U.R.S.O..md  architecture-curso-backend-1.md  implementation-phase4-api.md
scripts/: check-coverage.sh  clean.sh  info.sh  install.sh  lint.sh  list_ports.sh  run.sh  test.sh
sql/: tabelas.sql  valores.sql
src/: __init__.py  index.js
src/controller/: cidadaocontroller.mjs  equipeptccontroller.mjs  guiacontroller.mjs
src/curso_backend/: __init__.py  main.py
src/db/: initDb.js  sqliteHelpers.js
src/lib/: Cidadao.mjs  EquipedeProtecao.mjs  Guia.mjs
src/models/: Atendente.js  Atendente.mjs  BaseModel.js  BaseModel.mjs  Cidadao.js  Cidadao.mjs  Cidadão.mjs  Cuidador.js  Cuidador.mjs  Diagnostico.js  Emergencia.js  Funcionario.js  Funcionario.mjs  Guia.js  Guia.mjs  Ocorrencia.js  Profissional.js  Urso.js  Veterinario.js  Veterinario.mjs  Visita.mjs  atendente.mjs  equipeptc.mjs  veterinario.mjs
src/routes/: atendentes.js  cidadao.js  cidadoes.js  createCrudRouter.js  cuidadores.js  diagnosticos.js  emergencias.js  equipeprotecao.js  equipeptc.js  (+12 more)
tests/: README.md  conftest.py  fixtures_db.py  test_app.py  test_phase4_api.py  test_smoke.py
(+47 files in other folders)
