[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "curso-centro-ursos"
version = "0.1.0"
description = "Backend acadêmico do projeto C.U.R.S.O Centro de União, Resgate e Santuário dos Ursos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "mysql-connector-python>=9.0,<10.0",
  "sqlalchemy>=2.0,<3.0",
  "pytest>=7.0",
  "pytest-cov>=3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "httpx>=0.27,<1.0",
  "ruff>=0.11,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
